This is verson 1.1 of YGO. We added many new features, to be included here at a later date.

--- a/templates/a_P1.html
+++ b/templates/a_P1.html
@@ -16,14 +16,14 @@ function swipe(img_id)
 }
 function look_at(area)
 {
-	window.open( '/play?name=test&player=P1&view='+area, 'Image', 'width=largeImage.stylewidth,height=largeImage.style.height,resizable=1' );
+	window.open( '/play?name=a&player=P1&view='+area, 'Image', 'width=largeImage.stylewidth,height=largeImage.style.height,resizable=1' );
 }
 </script>
 <a href="/">Back to main</a>
 <br>
 Life Points: 8000
 	<div id="board">
-		<div id="field_zone"><img src="http://static.api3.studiobebop.net/ygo_data/card_images/Magical_Citadel_of_Endymion.jpg" src2="http://static.api3.studiobebop.net/ygo_data/card_images/Magical_Citadel_of_Endymion.jpg" id="field_card" onClick='swipe("field_card");' ><img src="http://www.nigeltomm.com/images/orange_square_nigel_tomm_m.jpg" style="float:left;position:relative;width:10px;height:10px;top:-212px;left:10px">
+		<div id="field_zone"><img src="" src2=""  >
 		</div>
 		<div id="M1_zone"><img src="" src2=""  >
 		</div>
@@ -37,10 +37,10 @@ Life Points: 8000
 		</div>
 		<div id="graveyard_zone"><img src="" src2=""  >
 		</div>
-		<div id="banished_zone"><img src="http://static.api3.studiobebop.net/ygo_data/card_images/Endymion,_the_Master_Magician.jpg" onClick="look_at('banished');" >
+		<div id="banished_zone"><img src=""  >
 		</div>
 	
-		<div id="extra_deck_zone"><img src="http://static.api3.studiobebop.net/ygo_data/card_images/Magicians_Unite.jpg" onClick="look_at('extra');" >
+		<div id="extra_deck_zone"><img src=""  >
 		</div>
 		<div id="ST1_zone"><img src="" src2=""  >
 		</div>
