--- a/templates/a_P2.html
+++ b/templates/a_P2.html
@@ -16,7 +16,7 @@ function swipe(img_id)
 }
 function look_at(area)
 {
-	window.open( '/play?name=test&player=P2&view='+area, 'Image', 'width=largeImage.stylewidth,height=largeImage.style.height,resizable=1' );
+	window.open( '/play?name=a&player=P2&view='+area, 'Image', 'width=largeImage.stylewidth,height=largeImage.style.height,resizable=1' );
 }
 </script>
 <a href="/">Back to main</a>
@@ -37,7 +37,7 @@ Life Points: 8000
 		</div>
 		<div id="graveyard_zone"><img src="" src2=""  >
 		</div>
-		<div id="banished_zone"><img src="http://static.api3.studiobebop.net/ygo_data/card_images/Goblin_Attack_Force.jpg" onClick="look_at('banished');" >
+		<div id="banished_zone"><img src=""  >
 		</div>
 	
 		<div id="extra_deck_zone"><img src=""  >
@@ -57,11 +57,6 @@ Life Points: 8000
 		<br>
 	</div>
 	<div id="hand">
-		<img src="http://static.api3.studiobebop.net/ygo_data/card_images/Lightning_Vortex.jpg" src2="http://static.api3.studiobebop.net/ygo_data/card_images/Lightning_Vortex.jpg" style="float:left;position:relative;left:0px" id="H1_card" onClick='swipe("H1_card");' >
-		<img src="http://static.api3.studiobebop.net/ygo_data/card_images/Reinforcement_of_the_Army.jpg" src2="http://static.api3.studiobebop.net/ygo_data/card_images/Reinforcement_of_the_Army.jpg" style="float:left;position:relative;left:-50px" id="H2_card" onClick='swipe("H2_card");' >
-		<img src="http://static.api3.studiobebop.net/ygo_data/card_images/Reload.jpg" src2="http://static.api3.studiobebop.net/ygo_data/card_images/Reload.jpg" style="float:left;position:relative;left:-100px" id="H3_card" onClick='swipe("H3_card");' >
-		<img src="http://static.api3.studiobebop.net/ygo_data/card_images/Exiled_Force.jpg" src2="http://static.api3.studiobebop.net/ygo_data/card_images/Exiled_Force.jpg" style="float:left;position:relative;left:-150px" id="H4_card" onClick='swipe("H4_card");' >
-		<img src="http://static.api3.studiobebop.net/ygo_data/card_images/Marauding_Captain.jpg" src2="http://static.api3.studiobebop.net/ygo_data/card_images/Marauding_Captain.jpg" style="float:left;position:relative;left:-200px" id="H5_card" onClick='swipe("H5_card");' >
 		
 	</div>
 	<div>
