--- a/templates/main.html
+++ b/templates/main.html
@@ -1,13 +1,33 @@
 <html>
 <head>
 <title>Yu-Gi-Oh!</title>
+<link rel="stylesheet" type="text/css" href="static/site.css">
+<link rel="icon" type="image/png" href="static/favicon.png" />
 </head>
+<body>
 Hello! Welcome to the Yu-Gi-Oh main page.
 <br>
 <a href="games">View games</a>
 <br>
 <a href="decks">View decks</a>
-<?php 
-echo "Hello World!";
-?>
+<br>
+<br>
+<br>
+<br>
+-
+<br>
+<a href="/about">About</a> | <a href="/welcome">Welcome!</a>
+<br>
+<br>
+Current projects:
+<ul>
+	<li>Smart deck creation using Yugioh Wikia</li>
+	<li>Be able to see opponent's side of the field</li>
+	<li>Show program feedback to player</li>
+	<li>Player command help menu</li>
+	<li>Finish list of commands a player can use</li>
+	<li>Handle bad user input</li>
+	<li>UNDO</li>
+</ul>
+</body>
 </html>
