--- a/templates/unnamed_P1.html
+++ b/templates/unnamed_P1.html
@@ -16,7 +16,7 @@ function swipe(img_id)
 }
 function look_at(area)
 {
-	window.open( '/play?name=test&player=P1&view='+area, 'Image', 'width=largeImage.stylewidth,height=largeImage.style.height,resizable=1' );
+	window.open( '/play?name=unnamed&player=P1&view='+area, 'Image', 'width=largeImage.stylewidth,height=largeImage.style.height,resizable=1' );
 }
 </script>
 <a href="/">Back to main</a>
@@ -57,6 +57,7 @@ Life Points: 8000
 		<br>
 	</div>
 	<div id="hand">
+		<img src="http://static.api3.studiobebop.net/ygo_data/card_images/Endymion,_the_Master_Magician.jpg" src2="http://static.api3.studiobebop.net/ygo_data/card_images/Endymion,_the_Master_Magician.jpg" style="float:left;position:relative;left:0px" id="H1_card" onClick='swipe("H1_card");' >
 		
 	</div>
 	<div>
