--- a/templates/unnamed_P2.html
+++ b/templates/unnamed_P2.html
@@ -16,7 +16,7 @@ function swipe(img_id)
 }
 function look_at(area)
 {
-	window.open( '/play?name=test&player=P2&view='+area, 'Image', 'width=largeImage.stylewidth,height=largeImage.style.height,resizable=1' );
+	window.open( '/play?name=unnamed&player=P2&view='+area, 'Image', 'width=largeImage.stylewidth,height=largeImage.style.height,resizable=1' );
 }
 </script>
 <a href="/">Back to main</a>
