--- a/templates/Brad Test_P1.html
+++ b/templates/Brad Test_P1.html
@@ -16,14 +16,12 @@ function swipe(img_id)
 }
 function look_at(area)
 {
-	window.open( '/play?name=test&player=P1&view='+area, 'Image', 'width=largeImage.stylewidth,height=largeImage.style.height,resizable=1' );
+	window.open( '/play?name=Brad Test&player=P1&view='+area, 'Image', 'width=largeImage.stylewidth,height=largeImage.style.height,resizable=1' );
 }
 </script>
-<a href="/">Back to main</a>
-<br>
 Life Points: 8000
 	<div id="board">
-		<div id="field_zone"><img src="http://static.api3.studiobebop.net/ygo_data/card_images/Magical_Citadel_of_Endymion.jpg" src2="http://static.api3.studiobebop.net/ygo_data/card_images/Magical_Citadel_of_Endymion.jpg" id="field_card" onClick='swipe("field_card");' ><img src="http://www.nigeltomm.com/images/orange_square_nigel_tomm_m.jpg" style="float:left;position:relative;width:10px;height:10px;top:-212px;left:10px">
+		<div id="field_zone"><img src="" src2=""  >
 		</div>
 		<div id="M1_zone"><img src="" src2=""  >
 		</div>
@@ -35,12 +33,12 @@ Life Points: 8000
 		</div>
 		<div id="M5_zone"><img src="" src2=""  >
 		</div>
-		<div id="graveyard_zone"><img src="" src2=""  >
+		<div id="graveyard_zone"><img src="" src2="" onClick="look_at('graveyard');" >
 		</div>
-		<div id="banished_zone"><img src="http://static.api3.studiobebop.net/ygo_data/card_images/Endymion,_the_Master_Magician.jpg" onClick="look_at('banished');" >
+		<div id="banished_zone"><img src="" onClick="look_at('banished');" >
 		</div>
 	
-		<div id="extra_deck_zone"><img src="http://static.api3.studiobebop.net/ygo_data/card_images/Magicians_Unite.jpg" onClick="look_at('extra');" >
+		<div id="extra_deck_zone"><img src="" onClick="look_at('extra');" >
 		</div>
 		<div id="ST1_zone"><img src="" src2=""  >
 		</div>
@@ -52,11 +50,12 @@ Life Points: 8000
 		</div>
 		<div id="ST5_zone"><img src="" src2=""  >
 		</div>
-		<div id="deck_zone"><img src="http://images.wikia.com/yugioh/images/archive/e/e5/20080209143844!Back-EN.png" onClick="look_at('deck');" >
+		<div id="deck_zone"><img src="" onClick="look_at('deck');" >
 		</div>
 		<br>
 	</div>
 	<div id="hand">
+		<img src="http://static.api3.studiobebop.net/ygo_data/card_images/Turtle_Tiger.jpg" src2="http://static.api3.studiobebop.net/ygo_data/card_images/Turtle_Tiger.jpg" style="float:left;position:relative;left:0px" id="H1_card" onClick='swipe("H1_card");' >
 		
 	</div>
 	<div>
